# gdc-mashreq-solution

./: DEMO_SCRIPT.md  FINAL_SUMMARY.md  README.md  SETUP_GUIDE.md  SOLUTION_ARCHITECTURE.md  UI_FEATURES_COMPLETE.md  WHAT_CHANGED.md  main.py  pyproject.toml  seed_social_posts.py  start.bat  start.sh  test_winning_solution.py
bank_website/: .gitignore  ARCHITECTURE.md  DRIVER_ANALYSIS_UPDATE.md  IAA_ENHANCEMENT_SUMMARY.md  OPERATOR_JOURNEY_MAP.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  SETUP_GUIDE.md  TESTING_GUIDE.md  TROUBLESHOOTING.md  UI_UX_SUMMARY.md  fda_agent_simulator.py  social_media_simulator.py  start.ps1  test_iaa_agent.py
bank_website/backend/: .env.example  README.md  config.json  main.py  migrate_add_fields.py  requirements.txt
bank_website/backend/app/: config.py  database.py  models.py  schemas.py  seed_data.py  websocket.py
bank_website/backend/app/agents/: __init__.py  eba_agent.py  iaa_agent.py
bank_website/backend/scripts/: clear_database.py  seed_database.py  test_iaa_search.py  test_iaa_sentiment_search.py
bank_website/frontend/: README.md  index.html  package-lock.json  package.json
bank_website/frontend/src/: App.tsx  api.ts  index.css  types.ts
fda_agent/: README.md  fda_agent.py  fda_state.json  generate_posts.py
social_media/backend/: chatroom.db  history.json  requirements.txt  run.py
social_media/backend/app/: database.py  main.py  models.py  schemas.py
social_media/frontend/: index.html  package-lock.json  package.json  tailwind.config.ts
social_media/frontend/src/: App.tsx  index.css
(+34 files in other folders)
