[project]
name = "gdc-mashreq-solution"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles==23.2.1",
    "aiosqlite==0.19.0",
    "faker==22.0.0",
    "fastapi==0.110.0",
    "httpx>=0.27.2",
    "numpy==1.26.3",
    "ollama>=0.3.3",
    "pydantic==2.5.3",
    "pydantic-settings==2.1.0",
    "python-dotenv==1.0.1",
    "python-json-logger==2.0.7",
    "python-multipart==0.0.9",
    "sentence-transformers==2.3.1",
    "sqlalchemy==2.0.25",
    "uvicorn[standard]==0.27.1",
    "websockets==12.0",
]
